--- a/pimicosMultiAxis.ui
+++ b/pimicosMultiAxis.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>751</width>
-    <height>442</height>
+    <height>430</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -48,22 +48,13 @@
        <number>2</number>
       </property>
       <item row="2" column="2">
-       <widget class="QLCDNumber" name="CurrentPos_Yaw">
-        <property name="minimumSize">
-         <size>
-          <width>90</width>
-          <height>40</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>90</width>
-          <height>40</height>
-         </size>
+       <widget class="QPushButton" name="Move_Yaw">
+        <property name="text">
+         <string>Move</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="0" colspan="3">
+      <item row="0" column="0" colspan="4">
        <widget class="QDial" name="Dial_Yaw">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -115,13 +106,6 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
-       <widget class="QPushButton" name="Move_Yaw">
-        <property name="text">
-         <string>Move</string>
-        </property>
-       </widget>
-      </item>
       <item row="2" column="0">
        <widget class="QDoubleSpinBox" name="DesirePos_Yaw">
         <property name="decimals">
@@ -129,6 +113,32 @@
         </property>
         <property name="maximum">
          <double>359.899999999999977</double>
+        </property>
+        <property name="singleStep">
+         <double>0.100000000000000</double>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="3">
+       <widget class="QLCDNumber" name="CurrentPos_Yaw">
+        <property name="minimumSize">
+         <size>
+          <width>90</width>
+          <height>40</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>90</width>
+          <height>40</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QLabel" name="label_7">
+        <property name="text">
+         <string>deg</string>
         </property>
        </widget>
       </item>
@@ -171,18 +181,65 @@
          <double>5.000000000000000</double>
         </property>
         <property name="singleStep">
-         <double>0.010000000000000</double>
+         <double>0.100000000000000</double>
         </property>
        </widget>
       </item>
-      <item row="2" column="2">
+      <item row="2" column="3">
        <widget class="QPushButton" name="Move_Pitch">
         <property name="text">
          <string>Move</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="1" rowspan="2" colspan="4">
+      <item row="2" column="4">
+       <widget class="QLCDNumber" name="CurrentPos_Pitch">
+        <property name="minimumSize">
+         <size>
+          <width>90</width>
+          <height>40</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>90</width>
+          <height>40</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0" rowspan="3">
+       <widget class="QScrollBar" name="Scroll_Pitch">
+        <property name="minimumSize">
+         <size>
+          <width>16</width>
+          <height>100</height>
+         </size>
+        </property>
+        <property name="minimum">
+         <number>-50</number>
+        </property>
+        <property name="maximum">
+         <number>50</number>
+        </property>
+        <property name="pageStep">
+         <number>1</number>
+        </property>
+        <property name="tracking">
+         <bool>false</bool>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="invertedAppearance">
+         <bool>false</bool>
+        </property>
+        <property name="invertedControls">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1" rowspan="2" colspan="5">
        <widget class="QDial" name="Dial_Pitch">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -234,50 +291,10 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="0" rowspan="3">
-       <widget class="QScrollBar" name="Scroll_Pitch">
-        <property name="minimumSize">
-         <size>
-          <width>16</width>
-          <height>100</height>
-         </size>
-        </property>
-        <property name="minimum">
-         <number>-50</number>
-        </property>
-        <property name="maximum">
-         <number>50</number>
-        </property>
-        <property name="pageStep">
-         <number>1</number>
-        </property>
-        <property name="tracking">
-         <bool>false</bool>
-        </property>
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="invertedAppearance">
-         <bool>false</bool>
-        </property>
-        <property name="invertedControls">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="3">
-       <widget class="QLCDNumber" name="CurrentPos_Pitch">
-        <property name="minimumSize">
-         <size>
-          <width>90</width>
-          <height>40</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>90</width>
-          <height>40</height>
-         </size>
+      <item row="2" column="2">
+       <widget class="QLabel" name="label_6">
+        <property name="text">
+         <string>deg</string>
         </property>
        </widget>
       </item>
@@ -302,29 +319,14 @@
       <property name="spacing">
        <number>2</number>
       </property>
-      <item row="6" column="0">
-       <widget class="QDoubleSpinBox" name="DesirePos_Roll">
-        <property name="minimumSize">
-         <size>
-          <width>0</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="keyboardTracking">
-         <bool>false</bool>
-        </property>
-        <property name="minimum">
-         <double>-5.000000000000000</double>
-        </property>
-        <property name="maximum">
-         <double>5.000000000000000</double>
-        </property>
-        <property name="singleStep">
-         <double>0.010000000000000</double>
+      <item row="6" column="2">
+       <widget class="QPushButton" name="Move_Roll">
+        <property name="text">
+         <string>Move</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="0" colspan="3">
+      <item row="4" column="0" colspan="4">
        <widget class="QScrollBar" name="Scroll_Roll">
         <property name="minimumSize">
          <size>
@@ -355,7 +357,29 @@
         </property>
        </widget>
       </item>
-      <item row="6" column="2">
+      <item row="6" column="0">
+       <widget class="QDoubleSpinBox" name="DesirePos_Roll">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="keyboardTracking">
+         <bool>false</bool>
+        </property>
+        <property name="minimum">
+         <double>-5.000000000000000</double>
+        </property>
+        <property name="maximum">
+         <double>5.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.100000000000000</double>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="3">
        <widget class="QLCDNumber" name="CurrentPos_Roll">
         <property name="minimumSize">
          <size>
@@ -371,7 +395,7 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="0" rowspan="4" colspan="3">
+      <item row="0" column="0" rowspan="4" colspan="4">
        <widget class="QDial" name="Dial_Roll">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -427,9 +451,9 @@
        </widget>
       </item>
       <item row="6" column="1">
-       <widget class="QPushButton" name="Move_Roll">
+       <widget class="QLabel" name="label_5">
         <property name="text">
-         <string>Move</string>
+         <string>deg</string>
         </property>
        </widget>
       </item>
@@ -448,7 +472,39 @@
       <property name="margin">
        <number>2</number>
       </property>
-      <item row="1" column="2" rowspan="3">
+      <item row="0" column="3">
+       <widget class="QLabel" name="Plus_Z">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>+</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QDoubleSpinBox" name="DesirePos_Z">
+        <property name="keyboardTracking">
+         <bool>false</bool>
+        </property>
+        <property name="minimum">
+         <double>-30.000000000000000</double>
+        </property>
+        <property name="maximum">
+         <double>0.000000000000000</double>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QPushButton" name="Move_Z">
+        <property name="text">
+         <string>Move</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="3" rowspan="3">
        <widget class="QScrollBar" name="Scroll_Z">
         <property name="minimumSize">
          <size>
@@ -494,68 +550,6 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="CurPos_Z">
-        <property name="font">
-         <font>
-          <pointsize>10</pointsize>
-         </font>
-        </property>
-        <property name="acceptDrops">
-         <bool>false</bool>
-        </property>
-        <property name="text">
-         <string>Current Position</string>
-        </property>
-        <property name="wordWrap">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="QPushButton" name="Move_Z">
-        <property name="text">
-         <string>Move</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QDoubleSpinBox" name="DesirePos_Z">
-        <property name="keyboardTracking">
-         <bool>false</bool>
-        </property>
-        <property name="minimum">
-         <double>-30.000000000000000</double>
-        </property>
-        <property name="maximum">
-         <double>0.000000000000000</double>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="2">
-       <widget class="QLabel" name="Plus_Z">
-        <property name="font">
-         <font>
-          <pointsize>12</pointsize>
-         </font>
-        </property>
-        <property name="text">
-         <string>+</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="2">
-       <widget class="QLabel" name="Minus_Z">
-        <property name="font">
-         <font>
-          <pointsize>12</pointsize>
-         </font>
-        </property>
-        <property name="text">
-         <string>-</string>
-        </property>
-       </widget>
-      </item>
       <item row="1" column="1">
        <widget class="QLCDNumber" name="CurrentPos_Z">
         <property name="minimumSize">
@@ -589,6 +583,50 @@
         </property>
         <property name="intValue" stdset="0">
          <number>0</number>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="3">
+       <widget class="QLabel" name="Minus_Z">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>-</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="CurPos_Z">
+        <property name="font">
+         <font>
+          <pointsize>10</pointsize>
+         </font>
+        </property>
+        <property name="acceptDrops">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>Current Position</string>
+        </property>
+        <property name="wordWrap">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2">
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>mm</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>mm</string>
         </property>
        </widget>
       </item>
@@ -757,6 +795,20 @@
         </property>
         <property name="intValue" stdset="0">
          <number>0</number>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="3">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>mm</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="3">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>mm</string>
         </property>
        </widget>
       </item>
